--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,9 @@ install_requires =
     numpy
     magicgui
     qtpy
+    napari-video
+    napari-plot
+    ethome-ml
 
 python_requires = >=3.8
 include_package_data = True
