--- a/src/ethome_ml_napari/napari.yaml
+++ b/src/ethome_ml_napari/napari.yaml
@@ -1,5 +1,7 @@
 name: napari-ethome
 display_name: Ethome napari
+on_activate: ethome_ml_napari.load:load_plugin
+on_deactivate: ethome_ml_napari.load:close_plugin
 contributions:
   commands:
     - id: napari-ethome.get_reader
@@ -15,34 +17,23 @@ contributions:
       python_name: ethome_ml_napari._sample_data:make_sample_data
       title: Load sample data from Ethome napari
     - id: napari-ethome.make_qwidget
-      python_name: ethome_ml_napari._widget:ExampleQWidget
-      title: Make example QWidget
-    - id: napari-ethome.make_magic_widget
-      python_name: ethome_ml_napari._widget:example_magic_widget
-      title: Make example magic widget
-    - id: napari-ethome.make_func_widget
-      python_name: ethome_ml_napari._widget:example_function_widget
-      title: Make example function widget
+      python_name: ethome_ml_napari._widget:PipelineQWidget
+      title: Behavior analysis pipeline
   readers:
     - command: napari-ethome.get_reader
       accepts_directories: false
-      filename_patterns: ['*.npy']
+      filename_patterns: ['*.json']
   writers:
     - command: napari-ethome.write_multiple
       layer_types: ['image*','labels*']
       filename_extensions: []
     - command: napari-ethome.write_single_image
       layer_types: ['image']
-      filename_extensions: ['.npy']
+      filename_extensions: ['.csv']
   sample_data:
     - command: napari-ethome.make_sample_data
       display_name: Ethome napari
       key: unique_id.1
   widgets:
     - command: napari-ethome.make_qwidget
-      display_name: Example QWidget
-    - command: napari-ethome.make_magic_widget
-      display_name: Example Magic Widget
-    - command: napari-ethome.make_func_widget
-      autogenerate: true
-      display_name: Example Function Widget
+      display_name: Behavior analysis pipeline
