--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     magicgui
     qtpy
     napari-video
-    napari-plot
+    napari-plot @ git+ssh://git@github.com:benlansdell/napari-plot.git
     ethome-ml
 
 python_requires = >=3.8
